fix margins in title so hero-text is aligned and women overlap
moved woman margin to negative to cover unused space

set positioning to absolute so elements overlap when needed

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ li {
 
 h1 {
     font-family: "Philly Sans";
-    font-size: 2rem;
+    /* font-size: 2rem; */
     font-weight: bold;
     text-align: center;
 
@@ -199,7 +199,7 @@ h5 {
     background-color: #EB5F0A;
     background-position: top;
     background-size: cover;
-    /* position: relative; */
+    position: relative;
     width: 86%;
     height: 500px;
     /* padding-top: 10%; */
@@ -228,6 +228,9 @@ h5 {
     grid-auto-flow: row;
     grid-area: woman;
     align-items: end;
+    z-index: 2;
+    position: absolute;
+    margin-left: -80px;
   }
 
   .lux, .rosa, .greta,
@@ -312,7 +315,7 @@ h5 {
   }
   
   .title-text {  display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(3, 150px);
     grid-template-rows: repeat(2, 150px);
     gap: 0px 0px;
     grid-auto-flow: row;
@@ -323,8 +326,9 @@ h5 {
       "button"
       ".";
     grid-area: title;
-    width: 150%;
     align-items: end;
+    z-index: 1;
+    position: absolute;
   }
   
   .button {  display: grid;
@@ -336,7 +340,7 @@ h5 {
       ". . ."
       ". order-link ."
       ". . .";
-    grid-area: button;
+      grid-area: 3/2/4/3;
     width: 50%
   }
   
@@ -345,12 +349,13 @@ h5 {
   .hero-text {
     color: #FFD52D;
     text-shadow: 10px 8px black;
-    font-size: 6rem;
+    font-size: 3rem;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 20px;
     align-items: start;
     text-align: center;
+    grid-area: 1/1/3/4;
 
 }
 
